# Kafka-Streams-demo

./: Readme.md  settings.gradle
app/: build.gradle
app/src/main/java/: ChatStreamApp.java
backend/: README.md  app.py  pyproject.toml  requirements.txt
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
